recylerview used to show employeedetails

--- a/app/src/main/res/layout/activity_show_employee.xml
+++ b/app/src/main/res/layout/activity_show_employee.xml
@@ -8,10 +8,13 @@
     android:orientation="vertical"
     tools:context=".ShowEmployeeActivity">
 
-    <ListView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/lstEmployee"
-        />
+
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/recylerView" >
+
+        </androidx.recyclerview.widget.RecyclerView>
 
 </LinearLayout>
