--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -13,7 +13,7 @@
         android:hint="Enter Employee No"
         android:textSize="25sp"
         android:layout_margin="20dp"
-        android:id="@+id/etNameE"
+        android:id="@+id/etEmpNo"
         />
     <Button
         android:id="@+id/btnSearch"
@@ -23,9 +23,10 @@
         android:text="Search"
         android:textSize="20sp"
         />
-    <ListView
+    <TextView
+        android:textSize="25sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/lstEmployee"/>
+        android:id="@+id/tvData"/>
 
 </LinearLayout>
