--- a/app/src/main/res/layout/activity_register_employee.xml
+++ b/app/src/main/res/layout/activity_register_employee.xml
@@ -36,7 +36,7 @@
         android:textSize="25sp"
         />
     <Button
-        android:id="@+id/btnAddEmployee"
+        android:id="@+id/btnRegister"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
